@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinPort.h,v 1.10.4.1 2010/04/19 08:23:31 nijtmans Exp $
+ * RCS: @(#) $Id: tkWinPort.h,v 1.10.4.2 2010/11/16 15:06:07 nijtmans Exp $
  */
 
 #ifndef _WINPORT
@@ -58,6 +58,10 @@
 	/* Borland seems to forget to set this. */
 	typedef _TCHAR TCHAR;
 #	define _TCHAR_DEFINED
+#   endif
+#   if defined(_MSC_VER) && defined(__STDC__)
+	/* VS2005 SP1 misses this. See [Bug #3110161] */
+	typedef _TCHAR TCHAR;
 #   endif
 #endif
 
